add styles for menu

--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
     <div class="contact__info">
       <h3>Informacion</h3>
       <ul class="contact__info__list">
-        <li><a><img src="" alt="whatsapp-icon">+51952345678</a></li>
-        <li><a href=""><img src="" alt="mail-icon">aluraGeek@alura.com</a></li>
-        <li><a href=""> <img src="" alt="map-icon">Av. Isabel La Cat&oacute;lica 1506 Centro Comercial Gema Int. 301-302</a></li>
+        <li><a href="https://api.whatsapp.com/send?phone=51952345678" target="_blank"><img src="" alt="whatsapp-icon">+51952345678</a></li>
+        <li><a href="mailto:aluraGeek@alura.com"><img src="" alt="mail-icon">aluraGeek@alura.com</a></li>
+        <li><a href="https://maps.google.com/maps?q=-18.045571151586486, -70.25689159706033" target="_blank"> <img src="" alt="map-icon">Av. Isabel La Cat&oacute;lica 1506 Centro Comercial Gema Int. 301-302</a></li>
         <li><img src="" alt="timer-icon">Lun a S&aacute;b de 11:00 AM - 7:00 PM</li>
       </ul>
     </div>
