add styles for contact

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
       </div>
     </div>
   </section>
+  <!-- --------------------------------------info -->
   <section class="info">
     <div class="info__card">
       <img src="/assets/card-icon.png" alt="card-icon">
@@ -166,16 +167,17 @@
       </div>
     </div>    
   </section>
+  <!-- -----------------------------------------contact -->
   <section class="contact">
     <div class="contact__logo">
       <img src="assets/aluraLogo.png" alt="alura-logo">
       <p>Somos una tienda en l&iacute;nea apasionada por los Funkos y dedicada a proporcionar a los coleccionistas una experiencia &uacute;nica.</p>
       <div class="contact__logo__social">
-        <img src="" alt="facebook-icon">
-        <img src="" alt="whatsapp-icon">
-        <img src="" alt="instagram-icon">
-        <img src="" alt="telegram-icon">
-        <img src="" alt="twitter-icon">
+        <img src="assets/face-icon.png" alt="facebook-icon">
+        <img src="assets/whatsapp_icon.png" alt="whatsapp-icon">
+        <img src="assets/insta_icon.png" alt="instagram-icon">
+        <img src="assets/telegram-icon.png" alt="telegram-icon">
+        <img src="assets/twitter-icon.png" alt="twitter-icon">
       </div>
     </div>
     <nav class="contact__nav">
@@ -188,12 +190,12 @@
       </ul>
     </nav>
     <div class="contact__info">
-      <h3>Informacion</h3>
+      <h3>Informaci&oacute;n</h3>
       <ul class="contact__info__list">
-        <li><a href="https://api.whatsapp.com/send?phone=51952345678" target="_blank"><img src="" alt="whatsapp-icon">+51952345678</a></li>
-        <li><a href="mailto:aluraGeek@alura.com"><img src="" alt="mail-icon">aluraGeek@alura.com</a></li>
-        <li><a href="https://maps.google.com/maps?q=-18.045571151586486, -70.25689159706033" target="_blank"> <img src="" alt="map-icon">Av. Isabel La Cat&oacute;lica 1506 Centro Comercial Gema Int. 301-302</a></li>
-        <li><img src="" alt="timer-icon">Lun a S&aacute;b de 11:00 AM - 7:00 PM</li>
+        <li><a href="https://api.whatsapp.com/send?phone=51952345678" target="_blank"><img src="assets/whatsappFill-icon.png" alt="whatsapp-icon">+51952345678</a></li>
+        <li><a href="mailto:aluraGeek@alura.com"><img src="assets/mailbox_fill-icon.png" alt="mail-icon">aluraGeek@alura.com</a></li>
+        <li><a href="https://maps.google.com/maps?q=-18.045571151586486, -70.25689159706033" target="_blank"> <img src="assets/location_fill-icon.png" alt="map-icon">Av. Isabel La Cat&oacute;lica 1506 Centro Comercial Gema Int. 301-302</a></li>
+        <li><img src="assets/time_fill-icon.png" alt="timer-icon">Lun a S&aacute;b de 11:00 AM - 7:00 PM</li>
       </ul>
     </div>
     <div class="contact__customService">
@@ -208,12 +210,12 @@
     <div class="contact__formBox">
       <h3>Contactanos</h3>
       <form class="contact__formBox__form" method="get">
-        <input type="email" placeholder="Email">
-        <textarea name="message" id="message" placeholder="Escribe tu mensaje"></textarea>
+        <input type="email" placeholder="Email" required>
+        <textarea name="message" id="message" rows="5" required placeholder="Escribe tu mensaje"></textarea>
         <button type="submit">Enviar</button>
       </form>
     </div>
-    <footer>
+    <footer class="contact__footer"5>
       Eccomerce CRUD Desarrollado por un Alexander Machicado Gomez-2023.
     </footer>
   </section>
