add styles for login html

--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
   </section>
   <section class="btnUp">
     <a href="#alura">
-      <img src="assets/phoneIcon.png" alt="up-icon">
+      <img src="assets/up_icon.png" alt="up-icon">
     </a>
-  </sectio>
+  </section>
   <script src="animation.js"></script>
 </body>
 </html>
