add logic and styles to product page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="./src/styles/reset.css">
   <!------------------------------------------------------------------ font family lato -->
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="./src/styles/styles.css">
   <title>AluraGeek</title>
 </head>
 <body>
@@ -62,166 +62,12 @@
   <section class="stock">
     <h2>Productos destacados en stock</h2>
     <h3>Funko politics</h3>
-    <div class="stock__category">
-      <div class="stock__category__card">
-        <div class="stock__category__card__photo">
-          <img class="stock__category__card__photo__first" src="assets/castroFunko.jpg" alt="funko_profile">
-          <img src="assets/karlMarxFunko.jpg" alt="funko-background">
-        </div>
-        <p>Funko politics: Oldman-Castro F1001</p>
-        <h4>$100.00</h4>
-        <div class="stock__category__card__actions">
-          <img src="assets/heart-icon.png" alt="favorite-icon">
-          <button>Añadir al carrito</button>
-          <img src="assets/detail-icon.png" alt="detail-icon">
-        </div>
-      </div>
-      <div class="stock__category__card">
-        <div class="stock__category__card__photo">
-          <img class="stock__category__card__photo__first" src="assets/castroFunko.jpg" alt="funko_profile">
-          <img src="assets/karlMarxFunko.jpg" alt="funko-background">
-        </div>
-        <p>Funko politics: Oldman-Castro F1001</p>
-        <h4>$100.00</h4>
-        <div class="stock__category__card__actions">
-          <img src="assets/heart-icon.png" alt="favorite-icon">
-          <button>Añadir al carrito</button>
-          <img src="assets/detail-icon.png" alt="detail-icon">
-        </div>
-      </div>
-      <div class="stock__category__card">
-        <div class="stock__category__card__photo">
-          <img class="stock__category__card__photo__first" src="assets/castroFunko.jpg" alt="funko_profile">
-          <img src="assets/karlMarxFunko.jpg" alt="funko-background">
-        </div>
-        <p>Funko politics: Oldman-Castro F1001</p>
-        <h4>$100.00</h4>
-        <div class="stock__category__card__actions">
-          <img src="assets/heart-icon.png" alt="favorite-icon">
-          <button>Añadir al carrito</button>
-          <img src="assets/detail-icon.png" alt="detail-icon">
-        </div>
-      </div>
-      <div class="stock__category__card">
-        <div class="stock__category__card__photo">
-          <img class="stock__category__card__photo__first" src="assets/castroFunko.jpg" alt="funko_profile">
-          <img src="assets/karlMarxFunko.jpg" alt="funko-background">
-        </div>
-        <p>Funko politics: Oldman-Castro F1001</p>
-        <h4>$100.00</h4>
-        <div class="stock__category__card__actions">
-          <img src="assets/heart-icon.png" alt="favorite-icon">
-          <button>Añadir al carrito</button>
-          <img src="assets/detail-icon.png" alt="detail-icon">
-        </div>
-      </div>
-      <div class="stock__category__card">
-        <div class="stock__category__card__photo">
-          <img class="stock__category__card__photo__first" src="assets/castroFunko.jpg" alt="funko_profile">
-          <img src="assets/karlMarxFunko.jpg" alt="funko-background">
-        </div>
-        <p>Funko politics: Oldman-Castro F1001</p>
-        <h4>$100.00</h4>
-        <div class="stock__category__card__actions">
-          <img src="assets/heart-icon.png" alt="favorite-icon">
-          <button>Añadir al carrito</button>
-          <img src="assets/detail-icon.png" alt="detail-icon">
-        </div>
-      </div>
-      <div class="stock__category__card">
-        <div class="stock__category__card__photo">
-          <img class="stock__category__card__photo__first" src="assets/castroFunko.jpg" alt="funko_profile">
-          <img src="assets/karlMarxFunko.jpg" alt="funko-background">
-        </div>
-        <p>Funko politics: Oldman-Castro F1001</p>
-        <h4>$100.00</h4>
-        <div class="stock__category__card__actions">
-          <img src="assets/heart-icon.png" alt="favorite-icon">
-          <button>Añadir al carrito</button>
-          <img src="assets/detail-icon.png" alt="detail-icon">
-        </div>
-      </div>
+    <div class="stock__category" data-categoryA>
+
     </div>
     <h3>Funko funny </h3>
-    <div class="stock__category">
-      <div class="stock__category__card">
-        <div class="stock__category__card__photo">
-          <img class="stock__category__card__photo__first" src="assets/castroFunko.jpg" alt="funko_profile">
-          <img src="assets/karlMarxFunko.jpg" alt="funko-background">
-        </div>
-        <p>Funko politics: Oldman-Castro F1001</p>
-        <h4>$100.00</h4>
-        <div class="stock__category__card__actions">
-          <img src="assets/heart-icon.png" alt="favorite-icon">
-          <button>Añadir al carrito</button>
-          <img src="assets/detail-icon.png" alt="detail-icon">
-        </div>
-      </div>
-      <div class="stock__category__card">
-        <div class="stock__category__card__photo">
-          <img class="stock__category__card__photo__first" src="assets/castroFunko.jpg" alt="funko_profile">
-          <img src="assets/karlMarxFunko.jpg" alt="funko-background">
-        </div>
-        <p>Funko politics: Oldman-Castro F1001</p>
-        <h4>$100.00</h4>
-        <div class="stock__category__card__actions">
-          <img src="assets/heart-icon.png" alt="favorite-icon">
-          <button>Añadir al carrito</button>
-          <img src="assets/detail-icon.png" alt="detail-icon">
-        </div>
-      </div>
-      <div class="stock__category__card">
-        <div class="stock__category__card__photo">
-          <img class="stock__category__card__photo__first" src="assets/castroFunko.jpg" alt="funko_profile">
-          <img src="assets/karlMarxFunko.jpg" alt="funko-background">
-        </div>
-        <p>Funko politics: Oldman-Castro F1001</p>
-        <h4>$100.00</h4>
-        <div class="stock__category__card__actions">
-          <img src="assets/heart-icon.png" alt="favorite-icon">
-          <button>Añadir al carrito</button>
-          <img src="assets/detail-icon.png" alt="detail-icon">
-        </div>
-      </div>
-      <div class="stock__category__card">
-        <div class="stock__category__card__photo">
-          <img class="stock__category__card__photo__first" src="assets/castroFunko.jpg" alt="funko_profile">
-          <img src="assets/karlMarxFunko.jpg" alt="funko-background">
-        </div>
-        <p>Funko politics: Oldman-Castro F1001</p>
-        <h4>$100.00</h4>
-        <div class="stock__category__card__actions">
-          <img src="assets/heart-icon.png" alt="favorite-icon">
-          <button>Añadir al carrito</button>
-          <img src="assets/detail-icon.png" alt="detail-icon">
-        </div>
-      </div>
-      <div class="stock__category__card">
-        <div class="stock__category__card__photo">
-          <img class="stock__category__card__photo__first" src="assets/castroFunko.jpg" alt="funko_profile">
-          <img src="assets/karlMarxFunko.jpg" alt="funko-background">
-        </div>
-        <p>Funko politics: Oldman-Castro F1001</p>
-        <h4>$100.00</h4>
-        <div class="stock__category__card__actions">
-          <img src="assets/heart-icon.png" alt="favorite-icon">
-          <button>Añadir al carrito</button>
-          <img src="assets/detail-icon.png" alt="detail-icon">
-        </div>
-      </div>
-      <div class="stock__category__card">
-        <div class="stock__category__card__photo">
-          <img class="stock__category__card__photo__first" src="assets/castroFunko.jpg" alt="funko_profile">
-          <img src="assets/karlMarxFunko.jpg" alt="funko-background">
-        </div>
-        <p>Funko politics: Oldman-Castro F1001</p>
-        <h4>$100.00</h4>
-        <div class="stock__category__card__actions">
-          <img src="assets/heart-icon.png" alt="favorite-icon">
-          <button>Añadir al carrito</button>
-          <img src="assets/detail-icon.png" alt="detail-icon">
-        </div>
-      </div>
+    <div class="stock__category" data-categoryB>
+
     </div>
   </section>
   <!-- --------------------------------------info -->
@@ -313,6 +159,7 @@
       <img src="assets/up_icon.png" alt="up-icon">
     </a>
   </section>
-  <script src="animation.js"></script>
+  <script type="module" src="./dist/main.js"></script>
+  <script src="/src/animation.js"></script>
 </body>
 </html>
