--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
   <section class="title">
     <div class="title__slider">
       <div class="title__slider__slide">
-        <img src="assets/rocketBanner.jpg" alt="rocket-banner">
-        <img src="assets/fidel-funko-gift.jpg" alt="castro-banner">
-        <img src="assets/lenin-funko slide.jpg" alt="lenin-slide">
-        <img src="assets/english.jpg" alt="anyone-icon">
+        <img src="https://i.ibb.co/BBBN5Ns/rocket-Banner.jpg" alt="rocket-banner">
+        <img src="https://i.ibb.co/27VvkjM/fidel-funko-gift.jpg" alt="castro-banner">
+        <img src="https://i.ibb.co/zJKQ4pr/lenin-funko-slide.jpg" alt="lenin-slide">
+        <img src="https://i.ibb.co/NpdP3p5/english.jpg" alt="anyone-icon">
       </div>
       <button onclick="slide(false)" class="title__slider__btnLeft"><img src="assets/arrow_left_fill.png" alt="arrowLeft-icon"></button>
       <button onclick="slide(true)" class="title__slider__btnRight"><img src="assets/arrow_right_line.png" alt="arrowRight-icon"></button>
