--- a/products.html
+++ b/products.html
@@ -44,6 +44,13 @@
   <section class="product">
     <h2>Productos</h2>
     <div class="product__box">
+      <div class="product__box__card">
+        <div class="product__box__card__add" title="Añadir Producto">
+          <a href="/addProducts.html">
+            <img src="assets/circle-icon.png" alt="circle-icon">
+          </a>
+        </div>
+      </div>
       
     </div>
   </section>
