finished pages home, detail, products and CRUD

--- a/addProducts.html
+++ b/addProducts.html
@@ -42,7 +42,7 @@
   </section>
   <!-- form Register -->
   <section class="addProd">
-    <h2>Registrar Producto</h2>
+    <h2 data-title>Registrar Producto</h2>
     <form class="addProd__form">
       <div class="addProd__form__field">
         <label for="name">Nombre</label>
